[gd_scene load_steps=6 format=3 uid="uid://te006pd1lr41"]

[ext_resource type="Script" uid="uid://cvenyijjafagi" path="res://scripts/start_screen.gd" id="1_a0vbq"]
[ext_resource type="Texture2D" uid="uid://cmo7ik5c4ggi1" path="res://assets/images/start_page_bg.png" id="2_a0vbq"]
[ext_resource type="FontFile" uid="uid://bjbsytxstwt6w" path="res://Baloo2-VariableFont_wght.ttf" id="3_2dvb4"]
[ext_resource type="Texture2D" uid="uid://dg2qyej27evun" path="res://assets/images/start_button.png" id="4_2dvb4"]
[ext_resource type="Texture2D" uid="uid://dkqibbyubu75u" path="res://assets/images/close_button.png" id="4_nj7f0"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a0vbq")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_a0vbq")
expand_mode = 1
stretch_mode = 6

[node name="CloseButton" type="Button" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -137.99988
offset_top = 15.0
offset_right = -37.999878
offset_bottom = 115.0
grow_horizontal = 0
rotation = 6.656632e-05
icon = ExtResource("4_nj7f0")
flat = true
expand_icon = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -190.0
offset_top = -543.0
offset_right = 210.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 80
alignment = 1

[node name="NameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2dvb4")
theme_override_font_sizes/font_size = 45
placeholder_text = "Numele tau"

[node name="StartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
icon = ExtResource("4_2dvb4")
flat = true
icon_alignment = 1
expand_icon = true
